--- a/index.html
+++ b/index.html
@@ -1,92 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image to Text</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        form {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
-        }
-
-        input[type="file"] {
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #result {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #555;
-            text-align: center;
-        }
-    </style>
+    <title>Image Upload and Prediction</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Astronomical Image Classifier</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" id="imageInput" accept="image/*" required>
-        <button type="submit">Answer</button>
+    <h2>Upload an Image</h2>
+    <form id="uploadForm">
+        <input type="file" id="fileInput" name="file" />
+        <input type="submit" value="Upload" />
     </form>
     <div id="result"></div>
 
-    <script>
-        const form = document.getElementById('uploadForm');
-        form.onsubmit = async function(event) {
-            event.preventDefault();
-
-            const fileInput = document.getElementById('imageInput');
-            const file = fileInput.files[0];
-
-            const formData = new FormData();
-            formData.append('file', file);
-
-            const response = await fetch('/upload', {
-                method: 'POST',
-                body: formData,
-            });
-
-            const result = await response.text();
-            document.getElementById('result').innerText = result;
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
