--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             formData.append('file', file);  // Append the file to the form data
 
             try {
-                const response = await fetch('http://localhost:8000/upload', {
+                const response = await fetch('https://ayushkush2402-ftresnet50.hf.space/predict/image', {
                     method: 'POST',
                     body: formData,  // Send the form data with the file to the backend
                 });
