--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <h1>Astronomical Image Classifier</h1>
+    <h1>Plant Health Classifier</h1>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="imageInput" accept="image/*" required>
         <button type="submit">Answer</button>
